--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -42,6 +42,9 @@ jobs:
   BP:
     name: Build & Push
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
       - uses: actions/checkout@v3
 
