--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -60,7 +60,14 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-
+            
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{github.actor}}
+          password: ${{secrets.GITHUB_TOKEN}}
+            
       - name: Build with Maven
         run: mvn -B package --file pom.xml        
   
