--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -40,6 +40,8 @@ permissions:
   pull-requests: read # allows SonarQube to decorate PRs with analysis results
 
 jobs:
+  SonarQube:
+    uses: ./.github/workflows/sonarqube.yml
   BP:
     name: Build & Push
     runs-on: ubuntu-latest
@@ -60,6 +62,7 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
+            
       - name: Build with Maven
         run: mvn -B package --file pom.xml        
   
