--- a/.github/workflows/angular.yml
+++ b/.github/workflows/angular.yml
@@ -1,10 +1,7 @@
 name: NodeJS with Gulp
 
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+  workflow_dispatch:
 
 jobs:
   build:
