readjusting of repo for mono repo mockup

--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -81,7 +81,7 @@ jobs:
   publish:
     needs: sonarqube
     name: Build & Publish JAR
-    runs-on: ubuntu-latesT
+    runs-on: ubuntu-latest
     steps:
       - name: JIB container build and publish
         uses: MathieuSoysal/jib-container-publish.yml@v2.1.4
