readjusting of repo for mono repo mockup

--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -31,6 +31,7 @@ on:
   push:
     branches:
       - master
+      - feature-workflow-rebuild
     paths:
       - "./java/**"
   pull_request:
@@ -84,7 +85,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: JIB container build and publish
-        working-directory: java
+        working-directory: ./java
         uses: MathieuSoysal/jib-container-publish.yml@v2.1.4
         with:
           PASSWORD: ${{ secrets.TOKEN }}
