--- a/.github/workflows/angular.yml
+++ b/.github/workflows/angular.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install
 
       - name: Run tests
-        run: npm run test
+        run: npm run test:headless
 
       - name: Build
         run: npm run build
