--- a/.github/workflows/angular.yml
+++ b/.github/workflows/angular.yml
@@ -31,6 +31,6 @@ jobs:
       - name: Push to GHCR
         uses: macbre/push-to-ghcr@v13
         with:
-          context: angular
+          working-dir: angular
           github_token: ${{ secrets.TOKEN }}
           image_name: ${{ github.repository }}-angular
