--- a/.github/workflows/angular.yml
+++ b/.github/workflows/angular.yml
@@ -2,8 +2,28 @@ name: Angular Check, Build and Push
 
 on:
   workflow_dispatch:
+  push:
+      branches:
+        - master
+      paths:
+        - "./angular/**"
 
 jobs:
+  sonarcloud:
+    name: SonarCloud
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}  
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_ANGULAR }}
+        with:
+          projectBaseDir: ./angular/
+  
   Build:
     name: Setup Node.js and build
     runs-on: ubuntu-latest
