--- a/.github/workflows/angular.yml
+++ b/.github/workflows/angular.yml
@@ -5,8 +5,9 @@ on:
   push:
       branches:
         - master
+        - feature-*
       paths:
-        - "./angular/**"
+        - "angular/**"
 
 jobs:
   sonarcloud:
