--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -116,6 +116,12 @@ jobs:
           kubectl get nodes -o wide
       - name: Network
         run: docker network inspect k3d-mock-up
+
+      - name: Deploy
+        run: |
+          cd java
+          kubectl run -n default -f deployment.yaml
+          kubectl get pods -n defualt
      
             
         
